# OpenGlTutorial

./: .gitignore  CMakeLists.txt
include/: IndexBuffer.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
include/Glad/glad/: glad.h
res/shaders/: basic.shader
src/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  glad.c  main.cpp
